--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -1,6 +1,6 @@
 <!-- form step 2 -->
 <div style="padding-left: 0; padding-right: 15px">
-  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()" readonly>
     <div class="row">
       <div class="col-md-1 order">
         <input type="number" formControlName="order" class="form-control order_input">
@@ -17,7 +17,7 @@
           <div *ngFor="let userView of userViews().controls; let i=index" [formGroupName]="i">
             <div class="row">
               <div class="col-md-1 order">
-                <input type="number" formControlName="order" class="form-control order_input" [disabled]="true">
+                <input type="number" formControlName="order" class="form-control order_input" readonly>
               </div>
               <div class="col-md-10">
                 <div class="row">
@@ -25,7 +25,7 @@
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/icon_name.svg" class="input-img">
-                      <input type="text" formControlName="name" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="name" class="input-text" readonly>
                     </div>
 <!--                    <div *ngIf="!userView.get('name')?.valid && (userView.get('name')?.dirty ||userView.get('name')?.touched)">-->
 <!--                      <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('name')?.errors?.required">-->
@@ -37,7 +37,7 @@
                     <div class="label_item">Email <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/login_email.svg" class="input-img">
-                      <input type="text" formControlName="email" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="email" class="input-text" readonly>
                     </div>
 <!--                    <div *ngIf="!userView.get('email')?.valid && (userView.get('email')?.dirty ||userView.get('email')?.touched)">-->
 <!--                      <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('email')?.errors?.required">-->
@@ -64,7 +64,7 @@
           <div formArrayName="userSigns" *ngFor="let alias of userSigns().controls; let i = index;">
             <div class="row" [formGroupName]="i">
               <div class="col-md-1 order">
-                <input type="number" formControlName="order" class="form-control order_input" [disabled]="true">
+                <input type="number" formControlName="order" class="form-control order_input" readonly>
               </div>
               <div class="col-md-10">
                 <div class="row">
@@ -72,7 +72,7 @@
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/icon_name.svg" class="input-img">
-                      <input type="text" formControlName="name" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="name" class="input-text" readonly>
                     </div>
 
 <!--                    <div *ngIf="!alias.get('name')?.valid && (alias.get('name')?.dirty ||alias.get('name')?.touched)">-->
@@ -86,7 +86,7 @@
                     <div class="label_item">Email <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/login_email.svg" class="input-img">
-                      <input type="text" formControlName="email" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="email" class="input-text" readonly>
                     </div>
 
 <!--                    <div *ngIf="!alias.get('email')?.valid && (alias.get('email')?.dirty ||alias.get('email')?.touched)">-->
@@ -139,7 +139,7 @@
                   </div>
                   <div class="col-md-5">
                     <div class="label_item">Số điện thoại <span class="require_star">*</span></div>
-                    <input type="text" formControlName="phone" class="form-control input_phone" [disabled]="true">
+                    <input type="text" formControlName="phone" class="form-control input_phone" readonly>
 
 <!--                    <div *ngIf="!alias.get('phone')?.valid && (alias.get('phone')?.dirty ||alias.get('phone')?.touched)">-->
 <!--                      <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('phone')?.errors?.required">-->
@@ -167,7 +167,7 @@
           <div *ngFor="let userDoc of userDocs().controls; let i=index" [formGroupName]="i">
             <div class="row">
               <div class="col-md-1 order">
-                <input type="number" formControlName="order" class="form-control order_input" [disabled]="true">
+                <input type="number" formControlName="order" class="form-control order_input" readonly>
               </div>
               <div class="col-md-10">
                 <div class="row">
@@ -175,7 +175,7 @@
                     <div class="label_item">Họ tên <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/icon_name.svg" class="input-img">
-                      <input type="text" formControlName="name" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="name" class="input-text" readonly>
                     </div>
 <!--                    <div *ngIf="!userDoc.get('name')?.valid && (userDoc.get('name')?.dirty ||userDoc.get('name')?.touched)">-->
 <!--                      <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('name')?.errors?.required">-->
@@ -187,7 +187,7 @@
                     <div class="label_item">Email <span class="require_star">*</span></div>
                     <div class="form-control input-line">
                       <img src="assets/img/login_email.svg" class="input-img">
-                      <input type="text" formControlName="email" class="input-text" [disabled]="true">
+                      <input type="text" formControlName="email" class="input-text" readonly>
                     </div>
 <!--                    <div *ngIf="!userDoc.get('email')?.valid && (userDoc.get('email')?.dirty ||userDoc.get('email')?.touched)">-->
 <!--                      <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('email')?.errors?.required">-->
