--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <div class="label_item">Tên hợp đồng <span class="require_star">*</span></div>
         <div class="input-group">
-          <input type="text" id="contractName" [(ngModel)]="contractName" class="form-control"/>
+          <input type="text" [(ngModel)]="name" class="form-control"/>
         </div>
       </div>
       <div class="form-group">
@@ -52,7 +52,7 @@
       <div class="form-group">
         <div class="label_item">Số hợp đồng</div>
         <div class="input-group">
-          <input type="text" id="contractNumber" [(ngModel)]="contractNumber" class="form-control"/>
+          <input type="text" [(ngModel)]="code" class="form-control"/>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
       <div class="form-group">
         <div class="label_item">Loại hợp đồng</div>
         <div class="col">
-          <ng-multiselect-dropdown id="contractType" [(ngModel)]="contractType" [placeholder]="'-- Chọn --'"
+          <ng-multiselect-dropdown [(ngModel)]="type_id" [placeholder]="'-- Chọn --'"
             [settings]="dropdownTypeSettings" [data]="contractTypeList">
             <ng-template #optionsTemplate let-item let-option="option" let-id="id" let-isSelected="isSelected">
               <div style="padding: 1px 10px; margin-right: 10px; right: 2px; top: -2px;">
@@ -119,7 +119,7 @@
       <div class="form-group">
         <div class="label_item">Lời nhắn</div>
         <div class="input-group">
-          <input type="text" id="comment" [(ngModel)]="comment" class="form-control"/>
+          <input type="text" [(ngModel)]="notes" class="form-control"/>
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
       <div class="form-group">
         <div class="label_item">Ngày đến hạn ký <span class="require_star">*</span></div>
         <div class="input-line">
-          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker input-text"></ngx-datepicker>
+          <ngx-datepicker [(ngModel)]="sign_time" [options]="options" class="date-picker input-text"></ngx-datepicker>
           <img src="assets/img/db_calendar.svg" alt="mobifone.contract" class="input-img">
         </div>
       </div>
