--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -120,6 +120,8 @@ h3{
   border-color: #368ee0;
   padding: 0;
   font-size: inherit;
+  right: 0px;
+  left: unset !important;
 }
 .drop{
   padding: 10px;
