--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
@@ -67,6 +67,10 @@
         align-items: center
       }
 
+      .title-contract {
+        padding-right: 5px;
+      }
+
       .show-list-name-class:nth-last-child(4) {
         //float: left;
         margin-right: 11px;
