--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -2,8 +2,8 @@
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div class="btn_footer">
     <div>
-      <button type="button" name="next" class="next action-button">Ủy quyền</button>
-      <button type="button" name="next" class="next action-button">Chuyển tiếp</button>
+      <button type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
+      <button type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
     </div>
     <div>
       <button type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>
