--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -69,7 +69,7 @@
           </div>
       </header>
 
-      <div class="container-fluid content">
+      <div class="container-fluid" [ngStyle]="getStyle()">
         <div class="row">
           <div class="form-group col-md-12">
             <router-outlet></router-outlet>
