--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -136,10 +136,10 @@ h3{
 }
 
 //content
-.content{
-  //margin-top: 60px;
-  margin-top: 40px;
-}
+//.content{
+//  margin-top: 60px;
+//  //margin-top: 40px;
+//}
 .content_footer{
   text-align: center;
   margin: 10px;
