--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -84,6 +84,7 @@
 .popup_title{
   margin: 0;
   font-weight: 500;
+  font-family: inherit;
 }
 .popup_close{
   font-size: 25px;
@@ -99,7 +100,6 @@
   margin: 0 10px;
 }
 .btn_submit{
-  width: 90px;
   font-size: inherit;
   background: #106DB6;
   color: white;
@@ -204,3 +204,14 @@
     max-width: 95% !important;
   }
 }
+.div_icon{
+  padding: 0 10px;
+}
+.img_icon{
+  width: 18px;
+  cursor: pointer;
+}
+.img_icon:hover{
+  width: 30px;
+}
+
