--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,24 +1,23 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
   <!-- step by step -->
-<!--  <p (click)="t()">log thong tin hopwj ddoongf</p>-->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
       <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
                       step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin hợp đồng</div>
+        <div [ngClass]="{'current_active' : step == 'infor-contract'}">{{'contract.information' | translate}}</div>
       </li>
 
       <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
                      step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div>
+        <div [ngClass]="{'current_active' : step == 'determine-contract'}">{{'contract.identify-signer' | translate}}</div>
       </li>
 
       <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế hợp đồng</div>
+        <div [ngClass]="{'current_active' : step == 'sample-contract'}">{{'contract.design' | translate}}</div>
       </li>
 
       <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
-        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div>
+        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">{{'contract.confirm' | translate}}</div>
       </li>
     </ul>
   </div>
