--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.scss
@@ -79,6 +79,12 @@
       .show-list-name-class:nth-last-child(2) {
         margin-right: 11px;
       }
+
+      .infor-contract {
+        color: black !important;
+        font-size: 13px !important;
+
+      }
     }
 
     &--user-sign {
