--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/infor-contract/infor-contract.component.html
@@ -128,7 +128,7 @@
       <div class="form-group">
         <div class="label_item">Ngày đến hạn ký <span class="require_star">*</span></div>
         <div class="input-line">
-          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker input-text" [disabled]="true"></ngx-datepicker>
+          <ngx-datepicker id="dateDeadline" [(ngModel)]="dateDeadline" [options]="options" class="date-picker input-text" ></ngx-datepicker>
           <img src="assets/img/db_calendar.svg" alt="mobifone.contract" class="input-img">
         </div>
       </div>
