--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.scss
@@ -195,7 +195,7 @@
   color: #2680eb;
   border-radius: 2px;
 }
-.staff-ck-da-keo {
+.ck-da-keo {
   border: 1px solid #92bff5;
   color: #2680eb;
   border-radius: 2px;
