--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 @font-face {
   font-family:font_lexend_deca;
-  src:url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('ttf');
+  src:url('assets/scss/font/LexendDeca-VariableFont_wght.ttf') format('opentype');
   font-weight:normal;
   font-style:normal;
 }
