--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -32,7 +32,7 @@
         <label class="label">THUỘC TÍNH</label>
         <div class="name-text" *ngIf="isEnableText">
           <label class="label-require">Tên trường: *</label>
-          <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name" (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')">
+          <input id="text-input-element" type="text" [ngModel]="this.objSignInfo.text_attribute_name" (ngModelChange)="changePositionSign($event, 'text_attribute_name', 'text')" [disabled]="disableText(this.objSignInfo)">
         </div>
         <div class="sign-unit-select">
           <label class="label-require">{{isEnableText || isChangeText ? "Người nhập" : "Người ký"}}: *</label>
@@ -78,15 +78,15 @@
   <div class="col-md-9 sample-contract__file viewer-pdf isDrag" style="background-color: #f3f7f9; position: relative">
     <div id="pdf-viewer-step-3">
       <div *ngFor="let d of this.convertToSignConfig()" class="show-list-name-drag" [style.width]="this.canvasWidth">
-        <div
+        <div class="resize-drag not-out-drop"
              [id]="d.id"
              style="z-index: -1"
              #itemElement
              (click)="getSignSelect(d)"
-             [ngClass]="{'resize-drag not-out-drop' : d.signType == 'partner'}"
+             [ngClass]="changeColorDrag(null, true)"
              [ngStyle]="changePosition(d)">
           <div class="name-sig-img-daky">{{d.name ? d.name : ''}}</div>
-          <div *ngIf="d.signType == 'partner'" class="sig-img-daky" (click)="onCancel($event, d)">
+          <div *ngIf="d.signature_party == 'partner'" class="sig-img-daky" (click)="onCancel($event, d)">
             <img src="assets/img/clear.svg" alt="">
             <img src="assets/img/border-clear.svg" alt="">
           </div>
