--- a/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
+++ b/src/app/main/contract-signature/components/footer-signature/footer-signature.component.html
@@ -1,11 +1,11 @@
 <div class="footer-contract">
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div class="btn_footer">
-    <div>
+    <div class="label">
       <button type="button" name="next" class="next action-button" (click)="processingAuthorization()">Ủy quyền</button>
       <button type="button" name="next" class="next action-button" (click)="forWardContract()">Chuyển tiếp</button>
     </div>
-    <div>
+    <div class="label">
       <button type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Từ chối</button>
       <button (click)="action()" type="button" name="next" class="next action-button">{{this.datas.action_title}}</button>
     </div>
