--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -7,7 +7,7 @@
       </div>
       <div class="col-md-11 form_content">
         <p>
-          <label class="labelOrg">TỔ CHỨC CỦA TÔI</label>
+          <label class="labelOrg">{{'organization.me' | translate}}</label>
           <input class="form-control textOrg" type="text" id="name" name="name" formControlName="name" readonly>
         </p>
 
@@ -29,7 +29,7 @@
                     </div>
                     <div *ngIf="!userView.get('name')?.valid && (userView.get('name')?.dirty || (userView.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('name')?.errors?.required">
-                        Họ tên không được để trống
+                        {{'error.user.name.required' | translate}}
                       </p>
                     </div>
                   </div>
@@ -41,10 +41,10 @@
                     </div>
                     <div *ngIf="!userView.get('email')?.valid && (userView.get('email')?.dirty || (userView.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('email')?.errors?.required">
-                        Email không được để trống
+                        {{'error.user.email.required' | translate}}
                       </p>
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userView.get('email')?.errors?.email">
-                        Email sai định dạng
+                        {{'error.user.email.format' | translate}}
                       </p>
                     </div>
                   </div>
@@ -77,7 +77,7 @@
 
                     <div *ngIf="!alias.get('name')?.valid && (alias.get('name')?.dirty || (alias.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('name')?.errors?.required">
-                        Họ tên không được để trống
+                        {{'error.user.name.required' | translate}}
                       </p>
                     </div>
 
@@ -91,10 +91,10 @@
 
                     <div *ngIf="!alias.get('email')?.valid && (alias.get('email')?.dirty || (alias.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('email')?.errors?.required">
-                        Email không được để trống
+                        {{'error.user.email.required' | translate}}
                       </p>
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('email')?.errors?.email">
-                        Email sai định dạng
+                        {{'error.user.email.format' | translate}}
                       </p>
                     </div>
 
@@ -127,7 +127,7 @@
 
                     <div *ngIf="!alias.get('signType')?.valid && (alias.get('signType')?.dirty || (alias.get('signType')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('signType')?.errors?.required">
-                        Loại ký không được để trống
+                        {{'error.user.sign-type.required' | translate}}
                       </p>
                     </div>
 
@@ -142,10 +142,10 @@
 
                     <div *ngIf="!alias.get('phone')?.valid && (alias.get('phone')?.dirty || (alias.get('phone')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('phone')?.errors?.required">
-                        Số điện thoại không được để trống
+                        {{'error.user.phone.required' | translate}}
                       </p>
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!alias.get('phone')?.errors?.pattern">
-                        Số điện thoại sai định dạng
+                        {{'error.user.phone.format' | translate}}
                       </p>
                     </div>
 
@@ -178,7 +178,7 @@
                     </div>
                     <div *ngIf="!userDoc.get('name')?.valid && (userDoc.get('name')?.dirty || (userDoc.get('name')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('name')?.errors?.required">
-                        Họ tên không được để trống
+                        {{'error.user.name.required' | translate}}
                       </p>
                     </div>
                   </div>
@@ -190,10 +190,10 @@
                     </div>
                     <div *ngIf="!userDoc.get('email')?.valid && (userDoc.get('email')?.dirty || (userDoc.get('email')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('email')?.errors?.required">
-                        Email không được để trống
+                        {{'error.user.email.required' | translate}}
                       </p>
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('email')?.errors?.email">
-                        Email sai định dạng
+                        {{'error.user.email.format' | translate}}
                       </p>
                     </div>
                   </div>
@@ -224,7 +224,7 @@
                     </div>
                     <div *ngIf="!userDoc.get('signType')?.valid && (userDoc.get('signType')?.dirty || (userDoc.get('signType')?.touched || submitted))">
                       <p class="alert alert-danger error-detail" role="alert" [hidden]="!userDoc.get('signType')?.errors?.required">
-                        Loại ký không được để trống
+                        {{'error.user.sign-type.required' | translate}}
                       </p>
                     </div>
                   </div>
@@ -262,12 +262,12 @@
 
               <div *ngIf="partners.value.type==1">
                 <p>
-                  <label class="labelOrg">TÊN ĐỐI TÁC <span class="require_star">*</span></label>
+                  <label class="labelOrg">{{'organization.partner.name' | translate}} <span class="require_star">*</span></label>
                   <input class="form-control textOrg" id="name" name="name" formControlName="name">
                 </p>
                 <div *ngIf="!partners.get('name')?.valid && (partners.get('name')?.dirty || (partners.get('name')?.touched || submitted))">
                   <p class="alert alert-danger error-detail" role="alert" [hidden]="!partners.get('name')?.errors?.required">
-                    Tên đối tác không được để trống
+                    {{'error.partner.name.required' | translate}}
                   </p>
                 </div>
 
@@ -289,7 +289,7 @@
                             </div>
                             <div *ngIf="!partnerLead.get('name')?.valid && (partnerLead.get('name')?.dirty || (partnerLead.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerLead.get('name')?.errors?.required">
-                                Họ tên không được để trống
+                                {{'error.user.name.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -301,10 +301,10 @@
                             </div>
                             <div *ngIf="!partnerLead.get('email')?.valid && (partnerLead.get('email')?.dirty || (partnerLead.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerLead.get('email')?.errors?.required">
-                                Email không được để trống
+                                {{'error.user.email.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerLead.get('email')?.errors?.email">
-                                Email sai định dạng
+                                {{'error.user.email.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -336,7 +336,7 @@
                             </div>
                             <div *ngIf="!partnerView.get('name')?.valid && (partnerView.get('name')?.dirty || (partnerView.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerView.get('name')?.errors?.required">
-                                Họ tên không được để trống
+                                {{'error.user.name.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -348,10 +348,10 @@
                             </div>
                             <div *ngIf="!partnerView.get('email')?.valid && (partnerView.get('email')?.dirty || (partnerView.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerView.get('email')?.errors?.required">
-                                Email không được để trống
+                                {{'error.user.email.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerView.get('email')?.errors?.email">
-                                Email sai định dạng
+                                {{'error.user.email.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -383,7 +383,7 @@
                             </div>
                             <div *ngIf="!partnerSign.get('name')?.valid && (partnerSign.get('name')?.dirty || (partnerSign.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('name')?.errors?.required">
-                                Họ tên không được để trống
+                                {{'error.user.name.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -395,10 +395,10 @@
                             </div>
                             <div *ngIf="!partnerSign.get('email')?.valid && (partnerSign.get('email')?.dirty || (partnerSign.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('email')?.errors?.required">
-                                Email không được để trống
+                                {{'error.user.email.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('email')?.errors?.email">
-                                Email sai định dạng
+                                {{'error.user.email.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -429,7 +429,7 @@
                             </div>
                             <div *ngIf="!partnerSign.get('signType')?.valid && (partnerSign.get('signType')?.dirty || (partnerSign.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('signType')?.errors?.required">
-                                Loại ký không được để trống
+                                {{'error.user.sign-type.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -442,10 +442,10 @@
                             <input type="text" formControlName="phone" class="form-control input_phone">
                             <div *ngIf="!partnerSign.get('phone')?.valid && (partnerSign.get('phone')?.dirty || (partnerSign.get('phone')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('phone')?.errors?.required">
-                                Số điện thoại không được để trống
+                                {{'error.user.phone.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerSign.get('phone')?.errors?.pattern">
-                                Số điện thoại sai định dạng
+                                {{'error.user.phone.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -477,7 +477,7 @@
                             </div>
                             <div *ngIf="!partnerDoc.get('name')?.valid && (partnerDoc.get('name')?.dirty || (partnerDoc.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('name')?.errors?.required">
-                                Họ tên không được để trống
+                                {{'error.user.name.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -489,10 +489,10 @@
                             </div>
                             <div *ngIf="!partnerDoc.get('email')?.valid && (partnerDoc.get('email')?.dirty || (partnerDoc.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('email')?.errors?.required">
-                                Email không được để trống
+                                {{'error.user.email.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('email')?.errors?.email">
-                                Email sai định dạng
+                                {{'error.user.email.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -523,7 +523,7 @@
                             </div>
                             <div *ngIf="!partnerDoc.get('signType')?.valid && (partnerDoc.get('signType')?.dirty || (partnerDoc.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerDoc.get('signType')?.errors?.required">
-                                Loại ký không được để trống
+                                {{'error.user.sign-type.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -540,12 +540,12 @@
 
               <div *ngIf="partners.value.type==2">
                 <p>
-                  <label class="labelOrg">TÊN ĐỐI TÁC <span class="require_star">*</span></label>
+                  <label class="labelOrg">{{'organization.partner.name' | translate}} <span class="require_star">*</span></label>
                   <input class="form-control textOrg" id="name" name="name" formControlName="name">
                 </p>
                 <div *ngIf="!partners.get('name')?.valid && (partners.get('name')?.dirty || (partners.get('name')?.touched || submitted))">
                   <p class="alert alert-danger error-detail" role="alert" [hidden]="!partners.get('name')?.errors?.required">
-                    Tên đối tác không được để trống
+                    {{'error.partner.name.required' | translate}}
                   </p>
                 </div>
 
@@ -567,7 +567,7 @@
                             </div>
                             <div *ngIf="!partnerUser.get('name')?.valid && (partnerUser.get('name')?.dirty || (partnerUser.get('name')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('name')?.errors?.required">
-                                Họ tên không được để trống
+                                {{'error.user.name.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -579,7 +579,7 @@
                             </div>
                             <div *ngIf="!partnerUser.get('email')?.valid && (partnerUser.get('email')?.dirty || (partnerUser.get('email')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('email')?.errors?.required">
-                                Email không được để trống
+                                {{'error.user.email.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -610,7 +610,7 @@
                             </div>
                             <div *ngIf="!partnerUser.get('signType')?.valid && (partnerUser.get('signType')?.dirty || (partnerUser.get('signType')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('signType')?.errors?.required">
-                                Loại ký không được để trống
+                                {{'error.user.sign-type.required' | translate}}
                               </p>
                             </div>
                           </div>
@@ -623,10 +623,10 @@
                             <input type="text" formControlName="phone" class="form-control input_phone">
                             <div *ngIf="!partnerUser.get('phone')?.valid && (partnerUser.get('phone')?.dirty || (partnerUser.get('phone')?.touched || submitted))">
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('phone')?.errors?.required">
-                                Số điện thoại không được để trống
+                                {{'error.user.phone.required' | translate}}
                               </p>
                               <p class="alert alert-danger error-detail" role="alert" [hidden]="!partnerUser.get('phone')?.errors?.pattern">
-                                Số điện thoại sai định dạng
+                                {{'error.user.phone.format' | translate}}
                               </p>
                             </div>
                           </div>
@@ -670,8 +670,8 @@
   </div>
   <div class="content_footer">@Copyright 2021 - MobiFone</div>
   <div>
-    <button type="button" name="next" class="next draft-button">Lưu nháp</button>
-    <button (click)="next()" type="button" name="next" class="next action-button pull-right">Tiếp theo</button>
+    <button type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate }}</button>
+    <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate }}</button>
   </div>
 </div>
 
